Complete refactor of the whole project to support PacketEvents instead of Protocolize.