@@ -1,49 +1,56 @@
 package dev.simplix.cirrus.gson;
 
-import com.google.gson.*;
+import com.google.gson.JsonDeserializationContext;
+import com.google.gson.JsonDeserializer;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParseException;
+import dev.simplix.cirrus.item.CirrusBaseItemStack;
 import dev.simplix.cirrus.item.CirrusItem;
-import dev.simplix.protocolize.api.chat.ChatElement;
-import dev.simplix.protocolize.api.item.BaseItemStack;
-import dev.simplix.protocolize.api.item.ItemStack;
-import dev.simplix.protocolize.data.ItemType;
+import dev.simplix.cirrus.item.CirrusItemType;
+import dev.simplix.cirrus.text.CirrusChatElement;
 import java.lang.reflect.Type;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
 import net.querz.nbt.tag.CompoundTag;
 
-public class ItemStackDeserializer implements JsonDeserializer<BaseItemStack> {
+public class ItemStackDeserializer implements JsonDeserializer<CirrusBaseItemStack> {
 
-  @Override
-  public BaseItemStack deserialize(
-      JsonElement json,
-      Type typeOfT,
-      JsonDeserializationContext context) throws JsonParseException {
+    @Override
+    public CirrusBaseItemStack deserialize(
+        JsonElement json,
+        Type typeOfT,
+        JsonDeserializationContext context) throws JsonParseException {
 
-    final JsonObject asJsonObject = json.getAsJsonObject();
-    final ItemType type = ItemType.valueOf(asJsonObject.get("type").getAsString());
-    final int amount = asJsonObject.get("amount").getAsInt();
-    final byte durability = asJsonObject.get("durability").getAsByte();
-    final int hideflags = asJsonObject.get("hide-flags").getAsInt();
-    final JsonElement nbtRaw = asJsonObject.get("nbt");
-    final CompoundTag nbt = nbtRaw == null
-        ? new CompoundTag()
-        : context.deserialize(nbtRaw, CompoundTag.class);
-    final String displayName = asJsonObject.get("display-name") != null ? asJsonObject
-        .get("display-name")
-        .getAsString() : "";
-    final List<String> lore = asJsonObject.get("lore") != null
-        ? context.deserialize(asJsonObject.get("lore"), List.class)
-        : null;
+        final JsonObject asJsonObject = json.getAsJsonObject();
+        final String typeStr = asJsonObject.get("type").getAsString();
+        final CirrusItemType type = CirrusItemType.of(typeStr);
+        final int amount = asJsonObject.get("amount").getAsInt();
+        final short durability = asJsonObject.get("durability").getAsShort();
+        final int hideflags = asJsonObject.get("hide-flags").getAsInt();
+        final JsonElement nbtRaw = asJsonObject.get("nbt");
+        final CompoundTag nbt = nbtRaw == null || nbtRaw.isJsonNull()
+                                ? new CompoundTag()
+                                : context.deserialize(nbtRaw, CompoundTag.class);
+        final String displayName = asJsonObject.get("display-name") != null
+                                   ? asJsonObject.get("display-name").getAsString()
+                                   : "";
+        @SuppressWarnings("unchecked")
+        final List<String> loreStrings = asJsonObject.get("lore") != null
+                                         ? context.deserialize(asJsonObject.get("lore"), List.class)
+                                         : new ArrayList<>();
 
-    final ItemStack itemStack = (ItemStack) new ItemStack(type, amount, durability)
-        .displayName(ChatElement.ofLegacyText(displayName))
-        .nbtData(nbt);
+        final CirrusItem item = new CirrusItem(type, (byte) amount, durability)
+            .displayName(CirrusChatElement.ofLegacyText(displayName))
+            .nbtData(nbt)
+            .hideFlags(hideflags);
 
-    itemStack.lore(lore.stream().map(ChatElement::ofLegacyText).collect(Collectors.toList()));
-    itemStack.hideFlags(hideflags);
+        if (loreStrings != null) {
+            item.lore(loreStrings.stream()
+                .map(CirrusChatElement::ofLegacyText)
+                .toList());
+        }
 
-    return itemStack;
-  }
+        return item;
+    }
 }
